JMH integration fixes
Signed-off-by: Luis Pinto <luis.pinto@consensys.net>