@@ -36,6 +36,7 @@ plugins {
   id 'se.patrikerdes.use-latest-versions' version '0.2.18'
   id 'com.github.ben-manes.versions' version '0.49.0'
   id 'org.jreleaser' version '1.16.0'
+  id 'me.champeau.jmh' version '0.7.3' apply false
 }
 
 description = 'A set of libraries and other tools to aid development of blockchain and other decentralized software in Java and other JVM languages'
@@ -121,6 +122,39 @@ subprojects {
       ktlint("0.49.1").editorConfigOverride(['indent_size': '2', 'continuation_indent_size' : '2'])
       trimTrailingWhitespace()
       endWithNewline()
+    }
+  }
+
+  if (file('src/jmh').directory) {
+    apply plugin: 'me.champeau.jmh'
+    tasks.named("jmh") {
+      description = "Usage: gradle jmh -Pincludes=MyBench -PasyncProfiler=<libPath> -PasyncProfilerOptions=<options>\n" +
+              "\nRun JMH benchmarks in each of the projects. Allows for controlling JMH execution directly from the command line.\n" +
+              "\t-Pincludes=<includePattern>\tInclude pattern (regular expression) for benchmarks to be executed. Defaults to including all benchmarks.\n" +
+              "\t-PasyncProfiler=<libPath>\tLibrary path to fetch the Async profiler from. Default is to disable profiling.\n" +
+              "\t-PasyncProfilerOptions=<asyncProfilerOptions>\tOptions to pass on to the Async profiler separated by ';'. Default is to produce a flamegraph with all other default profiler options.\n"
+    }
+
+    // to pass compilation as the compiler doesn't like what jmh tool is doing
+    compileJmhJava {
+      options.compilerArgs << '-Xlint:none'
+    }
+
+    jmh {
+      jmhVersion = '1.37'
+      fork = 3
+      includes = _strListCmdArg('includes', [''])
+      var asyncProfiler = _strCmdArg('asyncProfiler')
+      var asyncProfilerOptions = _strCmdArg('asyncProfilerOptions', 'output=flamegraph')
+      if (asyncProfiler != null) {
+        profilers = ['async:libPath=' + asyncProfiler + ';' + asyncProfilerOptions]
+      }
+      duplicateClassesStrategy = DuplicatesStrategy.WARN
+      jvmArgs = ['-XX:+EnableDynamicAgentLoading']
+    }
+
+    dependencies {
+      jmhAnnotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess:1.37'
     }
   }
 
@@ -564,4 +598,19 @@ tasks.register('checkNotice') {
     }
   }
   throw new GradleException('NOTICE file is not up-to-date')
+}
+
+def _strListCmdArg(name, defaultValue) {
+  if (!project.hasProperty(name))
+    return defaultValue
+
+  return ((String) project.property(name)).tokenize(',')
+}
+
+def _strCmdArg(name) {
+  return _strCmdArg(name, null)
+}
+
+def _strCmdArg(name, defaultValue) {
+  return project.hasProperty(name) ? project.property(name) as String : defaultValue
 }
